networkPolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1 
metadata: 
  namespace: secondary
  name: deny-from-other-namespaces
spec:
  podSelector:
    matchLabels:
  ingress:
  - from:
    - podSelector: {}
